<resources>
    <string name="app_name">Estate Agency</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="update_data">update</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="desp_text">description</string>
    <string name="address">address</string>
    <string name="house_type">house type</string>
    <string name="surface_area">surface area</string>
    <string name="room_number">room number</string>
    <string name="save">save</string>
    <string name="house_edit">edit</string>
    <string name="title">title</string>
    <string name="house_num">house number</string>
    <string name="latitude">latitude</string>
    <string name="price">price(€)</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navi">Estate Agency</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">map</string>
    <string name="title_search">search</string>
    <string name="title_me">me</string>
    <string name="action_add">add house</string>
    <string name="action_logout">logout</string>
    <string name="action_edit">edit</string>
    <string name="action_generate">genarate</string>
    <string name="action_delete">delete</string>
    <string name="longitude">longitude</string>
    <string name="title_activity_simulator">Loan Simulator</string>
    <string name="house_price">house price</string>
    <string name="financial_contribution">the financial contribution</string>
    <string name="loan_rate">the loan rate</string>
    <string name="loan_period">the loan period</string>
    <string name="simulator_loan">loan calculate simulator</string>
    <string name="title_activity_converter">Dollar Converter</string>
    <string name="convert">convert to dollar</string>
    <string name="currency_converter">price currency converter</string>
    <string name="title_tab_start_date">START</string>
    <string name="ttile_tab_end_date">END</string>
    <string name="search">search</string>
    <string name="search_field">show search field</string>
    <string name="but_done">done</string>
    <string name="sold">sold</string>
    <string name="permission_rationale_location">rationale location permission</string>
    <string name="permission_required_toast">require permission</string>
    <string name="location_permission_denied">location permission is denied</string>
    <string name="is_sold">is sold</string>
</resources>