<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.DetailsActivty">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="string/title"
        android:id="@+id/title_details"
        android:textSize="15sp"
        android:padding="3dp"
        android:textColor="@color/colorAccent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/price"
        android:id="@+id/tv_price"
        android:textSize="10sp"
        android:padding="3dp"
        android:textColor="@color/colorAccent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/desp_text"
        android:id="@+id/tv_describe"
        android:textSize="10sp"
        android:padding="3dp"
        android:textColor="@color/colorAccent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/address"
        android:id="@+id/tv_address"
        android:textSize="10sp"
        android:padding="3dp"
        android:textColor="@color/colorAccent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text=""
        android:id="@+id/tv_type"
        android:textSize="10sp"
        android:padding="3dp"
        android:textColor="@color/colorAccent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/surface_area"
        android:id="@+id/tv_surface"
        android:textSize="10sp"
        android:padding="3dp"
        android:textColor="@color/colorAccent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text=""
        android:id="@+id/tv_sold"
        android:textSize="10sp"
        android:padding="3dp"
        android:textColor="@color/blue_btn_bg_color"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text=""
        android:id="@+id/tv_room"
        android:textSize="10sp"
        android:padding="3dp"
        android:textColor="@color/blue_btn_bg_color"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/simulator"
        android:text="@string/simulator_loan"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/convert"
        android:text="@string/currency_converter"
        />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MapsActivity" />

</LinearLayout>