<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".view.UpdateActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#fff"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:id="@+id/navigation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ios_arrow_back" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:singleLine="true"
                    android:id="@+id/update_title"
                    android:text="@string/house_edit"
                    android:textColor="#000"
                    android:textSize="16sp"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_save"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:text="@string/save"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EFF0F0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:hint="please input description"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:hint=""
                android:inputType="number"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/is_sold"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_sold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sold"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_not_sold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="not sold"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center|top"
                android:text="@string/desp_text"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:gravity="left|top"
                android:hint=""
                android:minLines="6"
                android:padding="4dp"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center|top"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="left|top"
                android:hint=""
                android:minLines="6"
                android:padding="2dp"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/surface_area"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_surface"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:hint=""
                android:inputType="number"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/house_type"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_flat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="flat"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_house"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="house"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_office"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="office"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/house_num"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_house_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:inputType="number"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/latitude"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_latitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:hint="just input address and click this"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/longitude"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_longitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:clickable="true"
            android:focusableInTouchMode="false"
                android:gravity="center|left"
                android:hint="please input description"
                android:textSize="13sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
