<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".view.SimulatorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/house_price"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_house_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/financial_contribution"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_financial_co"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:inputType="number"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/loan_rate"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_loan_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:inputType="number"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F9FAFB">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/loan_period"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_loan_period"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:inputType="number"
                android:textSize="13sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="calculate"
            android:id="@+id/calculate"
            />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/result"
        android:textColor="@color/black"
        android:textSize="13sp" />
    </LinearLayout>
<!--</androidx.core.widget.NestedScrollView>-->
